# LydiaSyftPlus

./: .gitmodules  CMakeLists.txt  Dockerfile  LydiaSyftPlus.def  README.md
examples/: CMakeLists.txt  disagreement.ltlf  input.ltlf  test.ltlfplus
examples/09_ltlf_plus_synthesis/: CMakeLists.txt  ltlf_plus_synthesis.cpp
examples/complex_disj/: chained_1.ltlfplus  chained_1.part  chained_10.ltlfplus  chained_10.part  chained_11.ltlfplus  chained_11.part  chained_12.ltlfplus  chained_12.part  chained_13.ltlfplus  chained_13.part  chained_14.ltlfplus  chained_14.part  (+48 more)
scripts/: benchmark_frompaper.py  benchmark_optimised_compare.py  generate_complex_disjunction.py  generate_disjunction_benchmark.py  generate_frompaper.py  generate_newformula.py  head2head.py  ltlhelper.py  plot_frompaper_results.py  table-gen-manual.py  test_obligation_simplification.py  visualize_dfa.py  visualize_solver_trace.py
src/: CMakeLists.txt  LTLfPlusSynthesisMain.cpp  PPLTL2SDFA.cpp  PPLTLPlusSynthesisMain.cpp  PPLTLfPlusSynthesisMain.cpp
src/synthesis/: CMakeLists.txt
src/synthesis/header/: ObligationFragmentDetector.h  Synthesizer.h  VarMgr.h
src/synthesis/header/automata/: ExplicitStateDfa.h  SymbolicStateDfa.h
src/synthesis/header/automata/ppltl/: ValVisitor.h
src/synthesis/header/game/: BuchiSolver.hpp  DfaGameSynthesizer.h  ELHelpers.hh  EmersonLei.hpp  MannaPnueli.hpp  SCCDecomposer.h  Transducer.h  WeakGameSolver.h  ZielonkaTree.hh
src/synthesis/header/synthesizer/: LTLfPlusSynthesizer.h  LTLfPlusSynthesizerMP.h  ObligationLTLfPlusSynthesizer.h  PPLTLPlusSynthesizer.h  PPLTLPlusSynthesizerMP.h  PPLTLfPlusSynthesizer.h  PPLTLfPlusSynthesizerMP.h
src/synthesis/source/: ObligationFragmentDetector.cpp  Utils.cpp  VarMgr.cpp
src/synthesis/source/automata/: ExplicitStateDfa.cpp  SymbolicStateDfa.cpp
src/synthesis/source/automata/ppltl/: ValVisitor.cpp
src/synthesis/source/game/: BuchiSolver.cpp  DfaGameSynthesizer.cpp  EmersonLei.cpp  MannaPnueli.cpp  SCCDecomposer.cpp  WeakGameSolver.cpp  ZielonkaTree.cc
src/synthesis/source/synthesizer/: LTLfPlusSynthesizer.cpp  LTLfPlusSynthesizerMP.cpp  ObligationLTLfPlusSynthesizer.cpp  PPLTLPlusSynthesizer.cpp  PPLTLPlusSynthesizerMP.cpp  PPLTLfPlusSynthesizer.cpp  PPLTLfPlusSynthesizerMP.cpp
test/: CMakeLists.txt  test_ltlfplus_synthesis.cpp  test_ppltlfplus_synthesis.cpp  test_scc_decomposer.cpp  utils.cpp  utils.hpp
(+1138 files in other folders)
